# quinti-maze-2022

./: Cargo.toml  LICENSE  README.md  quinti-maze.bas
device/: Cargo.toml
device/.cargo/: config
device/src/: main.rs
quinti-maze/: Cargo.toml
quinti-maze/src/: draw.rs  game.rs  lib.rs  maze.rs  time.rs
sim/: Cargo.toml
sim/src/: main.rs
src/: draw.rs  game.rs  main.rs  maze.rs
