[package]
name = "quinti-maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "lcd_screen" ]
lcd_screen = []
memory_screen = []

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
rand = { version = "0.8.5", default-features = false, features = ["rand_chacha"] }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
