[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather_m4 = { version = "0.10.1", features = ["unproven"] }
panic-semihosting = "0.6.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
