[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rtic = "1.1.3"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
feather_m4 = { version = "0.10.1", features = ["unproven"] }
ili9341 = "0.5.0"
panic-semihosting = "0.6.0"
quinti-maze = { version = "0.1.0", path = "../quinti-maze" }
rtic-core = "1.0.0"
rtic-monotonic = "1.0.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
